--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
-module.zip
+release/module.zip
+release/module.tar.gz
+release/README.md
+release/CHANGELOG.md
+release/LICENSE
+release/CONTRIBUTING.md
+release/COPYING
