chore: Update configuration and dependencies
- Add '@scripts' path alias to babel.config.js and jsconfig.json
- Update package.json and package-lock.json to include 'loadash' dependency

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,7 +12,8 @@
       "@listeners/*": ["src/listeners/*"],
       "@unitTests/*": ["tests/unit/*"],
       "@integrationTests/*": ["tests/integration/*"],
-      "@mocks/*": ["tests/mocks/*"]
+      "@mocks/*": ["tests/mocks/*"],
+      "@scripts/*": ["scripts/*"],
     }
   },
   "include": ["src/**/*", "tests/**/*"]
