Add integration tests and scripts
* **tests/integration/moduleInit.test.js**: Add tests to verify initialization and execution of integration tests.
* **tests/integration/contextStateManagement.test.js**: Add tests to verify initialization and execution of context state management integration tests.
* **tests/integration/tokenTileInteraction.test.js**: Add tests to verify initialization and execution of token-tile interaction integration tests.
* **package.json**: Add script to run integration tests.
* **.github/workflows/run-tests.yml**: Add step to run integration tests.
* **.github/workflows/delete-tests.yml**: Add step to delete integration tests.

--- a/.github/workflows/delete-tests.yml
+++ b/.github/workflows/delete-tests.yml
@@ -28,3 +28,7 @@ jobs:
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Delete integration tests
+      run: |
+        rm -rf tests/integration
