--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,5 +34,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests
+    - name: Run unit tests
       run: npm test -- --coverage
+
+    - name: Run integration tests
+      run: npm run test:integration
