--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "rewire": "^7.0.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:integration": "jest --config jest.integration.config.js"
   },
   "dependencies": {
     "csslint": "^1.0.5",
