Change test naming convention to separate unit and integration tests
- Renamed all test files to use the `.unit.test.js` suffix for unit tests.
- Updated the Jest configuration to include the new naming convention for unit tests.
- Updated the package.json to reflect the changes in test file naming.
- Edit default test on package.json to run all tests and not just unit tests.
- Test command now runs tests with coverage by default.
- Add new shortcuts for running unit tests in the package.json scripts.
- Unit tests now run with coverage by default.
- Add new shortcuts for running integration tests in the package.json scripts.
- Add placeholder shortcut for running functionality tests in the package.json scripts.
- Add placeholder shortcut for running performance tests in the package.json scripts.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "rewire": "^7.0.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage",
+    "test:unit": "jest --testMatch=\"**/*.unit.test.js\" --coverage",
+    "test:integration": "jest --testMatch=\"**/*.int.test.js\"",
+    "test:functional": "echo 'Functional tests not configured' && exit 0",
+    "test:performance": "echo 'Performance tests not configured' && exit 0"
   },
   "dependencies": {
     "csslint": "^1.0.5",
