--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "rewire": "^7.0.0"
   },
   "scripts": {
-    "test": "jest",
-    "test:integration": "jest --config jest.integration.config.js"
+    "test": "jest --coverage",
+    "test:unit": "jest --testMatch=\"**/*.unit.test.js\" --coverage",
+    "test:integration": "jest --testMatch=\"**/*.int.test.js\"",
+    "test:functional": "echo 'Functional tests not configured' && exit 0",
+    "test:performance": "echo 'Performance tests not configured' && exit 0"
   },
   "dependencies": {
     "csslint": "^1.0.5",
