--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
+    "jsdom": "^26.1.0",
     "rewire": "^7.0.0"
   },
   "scripts": {
