feat: Update module configuration and constants to use values from module.json
- Add '@manifest' path to babel and jsconfig for easier imports.
- Import manifest data in constants.js to centralize configuration.
- Refactor CONTEXT and MODULE constants to use values from module.json.
- Introduce new flags and localization paths from manifest.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,7 @@
       "@integrationTests/*": ["tests/integration/*"],
       "@mocks/*": ["tests/mocks/*"],
       "@scripts/*": ["scripts/*"],
+      "@manifest": ["module.json"],
     }
   },
   "include": ["src/**/*", "tests/**/*"]
