feat: Add constants and parser for module configuration
- Introduce constants.yaml for defining module constants.
- Implement constants.js to parse YAML constants into a JavaScript object.
- Create constantsParser.js to handle YAML parsing logic.
- Update jsconfig.json and babel.config.js to include new paths for helpers and constants.
- Modify module.json to add settingsReady flag.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,8 @@
       "@mocks/*": ["tests/mocks/*"],
       "@scripts/*": ["scripts/*"],
       "@manifest": ["module.json"],
+      "@helpers/*": ["src/config/helpers/*"],
+      "@constants/*": ["src/constants/constants.js"],
     }
   },
   "include": ["src/**/*", "tests/**/*"],
