feat: Add Zod schema building and type mapping utilities
- Introduce `buildContextSchema` method in `ConstantsParser` to create Zod schemas from context schema definitions.
- Enhance `parseConstants` method to optionally build Zod schemas from parsed constants.
- Add `stringToZodType` function and `typeMap` in a new `stringToZodType.js` file for mapping string types to Zod schema types.
- Update Babel and JS config files to include new module paths for maps.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,6 +16,7 @@
       "@manifest": ["module.json"],
       "@helpers/*": ["src/config/helpers/*"],
       "@constants/*": ["src/constants/constants.js"],
+      "@maps/*": ["src/maps/*"],
     }
   },
   "include": ["src/**/*", "tests/**/*"],
