--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "csslint": "^1.0.5",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "validator": "^13.15.0",
+    "zod": "^3.24.4"
   }
 }
