feat: Implement constants management with YAML parsing and Zod schema
- Introduce ConstantsBuilder for retrieving and parsing constants from YAML.
- Add ConstantsGetter for reading constants from a specified YAML file.
- Implement ConstantsParser for parsing YAML and building Zod schemas.
- Create unit tests for ConstantsBuilder, ConstantsGetter, and ConstantsParser.
- Add integration tests to verify loading and parsing of constants.yaml.
- Update constants.yaml to include a test constant for validation.

--- a/src/constants/constants.yaml
+++ b/src/constants/constants.yaml
@@ -61,3 +61,6 @@ placeables:
       - "top-right"
       - "bottom-left"
       - "bottom-right"
+
+# The following constant is used only for testing purposes
+testConstant: "testValue" # DO NOT CHANGE THIS VALUE
