refactor: update import paths for constants helpers
- Adjusted import statements in constants.js and constantsBuilder.js
  to use relative paths instead of alias paths.
- Added new path alias for constants helpers in jsconfig.json and
  babel.config.js for better module resolution.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -15,6 +15,7 @@
       "@scripts/*": ["scripts/*"],
       "@manifest": ["module.json"],
       "@helpers/*": ["src/config/helpers/*"],
+      "@constantsHelpers/*": ["src/constants/helpers/*"],
       "@constants/*": ["src/constants/constants.js"],
       "@maps/*": ["src/maps/*"],
     }
