feat: add Validator utility class for data validation
- Introduced a new Validator class with static methods for various data validation checks.
- Updated babel.config.js and jsconfig.json to include new import paths for the Validator class.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,8 +16,9 @@
       "@manifest": ["module.json"],
       "@helpers/*": ["src/config/helpers/*"],
       "@constantsHelpers/*": ["src/constants/helpers/*"],
-      "@constants/*": ["src/constants/constants.js"],
+      "@constants": ["src/constants/constants.js"],
       "@maps/*": ["src/maps/*"],
+      "@validator": ["src/utils/static/validator.js"],
     }
   },
   "include": ["src/**/*", "tests/**/*"],
