fix: correct timestamp type in context schema
- Changed the type of 'timestamp' from 'datetime' to 'number' in the context schema to match Unix timestamp.

--- a/constants.yaml
+++ b/constants.yaml
@@ -34,7 +34,7 @@ context:
     flags: 'object'
     data: 'object'
     settings: 'object'
-    timestamp: 'datetime'
+    timestamp: 'number'
 
   # How to structure the context object
   remote:
