feat: enhance context management with root map and sync strategies
- Add rootMap configuration to context for dynamic path resolution.
- Introduce sync strategies and defaults for better synchronization control.
- Update parseConstants method to optionally parse rootMap.
- Implement createRootMapFromYaml function for root map creation.

--- a/constants.yaml
+++ b/constants.yaml
@@ -38,8 +38,47 @@ context:
 
   # How to structure the context object
   remote:
-    root: "module" # The root of the context object.
-    path: "context" # The path to the context object.
+    defaults:
+      rootIdentifier: "module" # The default identifier for the root object of the context.
+      defaultPathFromRoot: "context" # The default path of the context relative to the root object.
+    rootMap:
+      window: "globalNamespace.window"
+      document: "globalNamespace.document"
+      game: "globalNamespace.game"
+      user: "globalNamespace.game?.user"
+      world: "globalNamespace.game?.world"
+      canvas: "globalNamespace.canvas"
+      ui: "globalNamespace.ui"
+      local: "globalNamespace.localStorage"
+      session: "globalNamespace.sessionStorage"
+      module: "module"
+      invalid: null
+
+  sync:
+    # Default synchronization configuration
+    defaults:
+      autoSync: true
+      pullBeforeGet: true
+      pushAfterSet: true
+      syncStrategy: "mergeNewerWins"
+      syncThrottleMs: 1000
+      deepSync: true
+      compareBy: "modifiedAt"
+
+    # Available sync strategies
+    strategies:
+      - "mergeNewerWins"
+      - "mergeOlderWins"
+      - "overwriteLocal"
+      - "overwriteRemote"
+      - "manual"
+
+    # Available comparison methods
+    comparisonMethods:
+      - "modifiedAt"
+      - "createdAt"
+      - "version"
+      - "hash"
 
 # Constants relative to placeables
 placeables:
