docs: Clarify schema context object description in constants.yaml
- Updated comment for the schema context object to specify its use in validations.

--- a/constants.yaml
+++ b/constants.yaml
@@ -83,7 +83,8 @@ context:
     manifest: "manifest"
     # The name of the timestamp
     timestamp: "timestamp"
-  # The schema for the context object
+
+  # The schema for the context object to be used in validations
   schema:
     manifest: 'object'
     constants: 'object'
