feat: Update module aliases and Jest configuration
- Added new module aliases for constants and helpers in babel.config.js
- Updated Jest configuration to include setup tests in testMatch
- Adjusted roots in Jest config to include project root
- Refined coverage exclusions in Jest config
- Modified jsconfig.json to reflect new module paths

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,22 +3,21 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@baseClasses/*": ["src/baseClasses/*"],
       "@config/*": ["src/config/*"],
+      "@constants": ["src/constants/constants.js"],
+      "@constantsFolder/*": ["src/constants/*"],
       "@contexts/*": ["src/contexts/*"],
       "@data/*": ["src/data/*"],
       "@handlers/*": ["src/handlers/*"],
       "@utils/*": ["src/utils/*"],
       "@listeners/*": ["src/listeners/*"],
+      "@maps/*": ["src/maps/*"],
+      "@helpers/*": ["src/helpers/*"],
+      "@constantsHelpers/*": ["src/constants/helpers/*"],
+      "@validator": ["src/utils/static/validator.js"],
       "@integrationTests/*": ["tests/integration/*"],
       "@mocks/*": ["tests/mocks/*"],
-      "@scripts/*": ["scripts/*"],
-      "@manifest": ["module.json"],
-      "@helpers/*": ["src/config/helpers/*"],
-      "@constantsHelpers/*": ["src/constants/helpers/*"],
-      "@constants": ["src/constants/constants.js"],
-      "@maps/*": ["src/maps/*"],
-      "@validator": ["src/utils/static/validator.js"],
+      "@manifest": ["module.json"]
     }
   },
   "include": ["src/**/*", "tests/**/*"],
