--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
+    "jsonc-parser": "^3.3.1",
     "rewire": "^7.0.0"
   },
   "scripts": {
     "test": "jest --coverage",
     "test:unit": "jest --testMatch=\"**/*.unit.test.js\" --coverage",
     "test:integration": "jest --testMatch=\"**/*.int.test.js\"",
+    "test:setup": "jest --testMatch=\"**/*.setup.test.js\"",
     "test:functional": "echo 'Functional tests not configured' && exit 0",
     "test:performance": "echo 'Performance tests not configured' && exit 0"
   },
