chore: update .gitignore to include additional files
- Added coverage/ directory to ignore list
- Ignored contextContainer.unit.test.js file
- Ignored foundryvtt-over-my-head.code-workspace file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ module.zip
 .dependencygraph/
 node_modules/
 coverage/
+src/contexts/helpers/contextContainer.unit.test.js
+.vscode/foundryvtt-over-my-head.code-workspace
