--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "csslint": "^1.0.5",
+    "dayjs": "^1.11.13",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "validator": "^13.15.0",
