STASH: Improve structure and checks in constants folder

--- a/constants.yaml
+++ b/constants.yaml
@@ -129,5 +129,58 @@ placeables:
       - "bottom-left"
       - "bottom-right"
 
+# Constants for context helpers
+contextHelpers:
+  mergeStrategies:
+    MERGE_NEWER_WINS: "mergeNewerWins"
+    MERGE_SOURCE_PRIORITY: "mergeSourcePriority"
+    MERGE_TARGET_PRIORITY: "mergeTargetPriority"
+    UPDATE_SOURCE_TO_TARGET: "updateSourceToTarget"
+    UPDATE_TARGET_TO_SOURCE: "updateTargetToSource"
+    REPLACE: "replace"
+    NO_ACTION: "noAction"
+
+  comparisonResults:
+    SOURCE_NEWER: "sourceNewer"
+    TARGET_NEWER: "targetNewer"
+    EQUAL: "equal"
+    SOURCE_MISSING: "sourceMissing"
+    TARGET_MISSING: "targetMissing"
+    BOTH_MISSING: "bothMissing"
+    CONTAINER_A_NEWER: "containerANewer"
+    CONTAINER_B_NEWER: "containerBNewer"
+    CONTAINER_A_MISSING: "containerAMissing"
+    CONTAINER_B_MISSING: "containerBMissing"
+
+  defaultComponents:
+    - "schema"
+    - "constants"
+    - "manifest"
+    - "flags"
+    - "state"
+    - "data"
+    - "settings"
+
+  errorMessages:
+    invalidSourceTarget: "Source and target contexts must be provided"
+    emptyItemPaths: "Item paths must be a non-empty array"
+    emptySources: "Sources must be a non-empty array of contexts"
+    emptyTargets: "Targets must be a non-empty array of contexts"
+    emptyTarget: "Target context must be provided"
+    unsupportedObjectType: "Unsupported object type for synchronization"
+    unsupportedObjectTypes: "Unsupported object types for synchronization"
+    incompatibleTypes: "Incompatible object types: type mismatch between source and target"
+    invalidMergeContext: "Invalid source or target context for merge operation"
+    unknownSyncOperation: "Unknown synchronization operation: {operation}"
+    cannotOverwriteFrozen: "Cannot overwrite frozen item at key \"{key}\". Use ignoreFrozen option to force overwrite."
+    keyRenamed: "Key \"{key}\" is reserved. It will been renamed to \"_{key}\"."
+
+# Required attributes for a valid manifest (from https://foundryvtt.com/article/module-development/)
+requiredManifestAttributes:
+- "id"
+- "title"
+- "description"
+- "version"
+
 # The following constant is used only for testing purposes
 testConstant: "testValue" # DO NOT CHANGE THIS VALUE
