--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,10 +3,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@config/*": ["src/config/*"],
-      "@constants": ["src/constants/constants.js"],
-      "@manifest": ["src/constants/manifest.js"],
-      "@constantsFolder/*": ["src/constants/*"],
+      "@config": ["src/config/config.js"],
+      "@constants": ["src/config/constants.js"],
+      "@manifest": ["src/config/manifest.js"],
+      "@configFolder/*": ["src/config/*"],
       "@contexts/*": ["src/contexts/*"],
       "@data/*": ["src/data/*"],
       "@handlers/*": ["src/handlers/*"],
@@ -14,7 +14,7 @@
       "@listeners/*": ["src/listeners/*"],
       "@maps/*": ["src/maps/*"],
       "@helpers/*": ["src/helpers/*"],
-      "@constantsHelpers/*": ["src/constants/helpers/*"],
+      "@configHelpers/*": ["src/config/helpers/*"],
       "@validator": ["src/utils/static/validator.js"],
       "@integrationTests/*": ["tests/integration/*"],
       "@mocks/*": ["tests/mocks/*"],
